--- a/_docs/site-network/Q1_2.md
+++ b/_docs/site-network/Q1_2.md
@@ -65,27 +65,27 @@ The following river and water quality data was collected from this site:
 
 En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
-|     Site / Sitio: Q1.2                                   |     March / marzo 2023                                      |
-|----------------------------------------------------------|-----------------------------------------------------|
-|     Season / Temporada:                                  |     Austral Summer / Verano                         |
-|     Date / Fecha:                                        |     16.3.23                                         |
-|     Time / Hora:                                         |     9.15                                            |
-|     Width / Ancho (m)                                    |     4.70                                            |
-|     Depth / Profundidad (Av.) (m)                        |     0.22                                            |
-|     CSA / Area traversal (Av.) (m²)                      |     1.03                                            |
-|     Velocity / Velocidad  (Av.) (m/s)                    |     0.45                                            |
-|     Discharge / Caudal (Av.) (m³/s)                      |     0.465                                           |
-|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Principalmente rocas          |
-|     Temperature (Atmospheric) (°C)                       |     17.9                                            |
-|     Temperature (Water / Agua) (°C)                      |     11.84                                           |
-|     Atmospheric pressure / presión (mbar)                |     767.4                                           |
-|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |                                                     |
-|     Dissolved oxygen / Oxigeno disuelto (%)              |                                                     |
-|     pH                                                   |     8.68                                            |
-|     Conductivity / Conductividad (µS/cm)                 |     220                                             |
-|     Total Dissolved Solids (TDS / STD)  (ppm)            |     110                                             |
-|     ORP (mV)                                             |     228.1                                           |
-|     Turbidity / Turbidez                                 |     Slightly green/brown Un poco   verde/marron     |
-|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     123 (1.6N)                                      |
-|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     116                                             |
+|      Site / Sitio: Q1.2                                  |       March/ marzo 2023                             |       June / junio 2023            |
+|----------------------------------------------------------|-----------------------------------------------------|------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano                         |     Austral Winter / Invierno      |
+|     Date / Fecha:                                        |     16.3.23                                         |     21.6.23                        |
+|     Time / Hora:                                         |     9.15                                            |     9.00                           |
+|     Width / Ancho (m)                                    |     4.70                                            |     3.24                           |
+|     Depth / Profundidad (Av.) (m)                        |     0.22                                            |     0.22                           |
+|     CSA / Area traversal (Av.) (m²)                      |     1.03                                            |     0.71                           |
+|     Velocity / Velocidad  (Av.) (m/s)                    |     0.45                                            |     0.207                          |
+|     Discharge / Caudal (Av.) (m³/s)                      |     0.465                                           |     0.148                          |
+|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Mas  rocas                    |     Mainly boulders / Mas rocas    |
+|     Temperature (Atmospheric) (°C)                       |     17.9                                            |     11.5                           |
+|     Temperature (Water / Agua) (°C)                      |     11.84                                           |     7.35                           |
+|     Atmospheric pressure / presión (mbar)                |     767.4                                           |     767.7                          |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |                                                     |     10.05                          |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |                                                     |     112.0                          |
+|     pH                                                   |     8.68                                            |     8.56                           |
+|     Conductivity / Conductividad (µS/cm)                 |     220                                             |     281                            |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     110                                             |     141                            |
+|     ORP (mV)                                             |     228.1                                           |     146.1                          |
+|     Turbidity / Turbidez                                 |     Slightly green/brown Un poco   verde/marron     |     Clear / Transparente           |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     123 (1.6N)                                      |     184 (1.6N)                     |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     116                                             |     144                            |
 
