--- a/_docs/site-network/Q1_2.md
+++ b/_docs/site-network/Q1_2.md
@@ -75,7 +75,7 @@ En este lugar se recogieron los siguientes datos fluviales y de calidad del agua
 |     CSA / Area traversal (Av.) (m²)                      |     1.03                                            |     0.71                           |
 |     Velocity / Velocidad  (Av.) (m/s)                    |     0.45                                            |     0.207                          |
 |     Discharge / Caudal (Av.) (m³/s)                      |     0.465                                           |     0.148                          |
-|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Mas  rocas                    |     Mainly boulders / Mas rocas    |
+|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Mas rocas                     |     Mainly boulders / Mas rocas    |
 |     Temperature (Atmospheric) (°C)                       |     17.9                                            |     11.5                           |
 |     Temperature (Water / Agua) (°C)                      |     11.84                                           |     7.35                           |
 |     Atmospheric pressure / presión (mbar)                |     767.4                                           |     767.7                          |
@@ -85,7 +85,7 @@ En este lugar se recogieron los siguientes datos fluviales y de calidad del agua
 |     Conductivity / Conductividad (µS/cm)                 |     220                                             |     281                            |
 |     Total Dissolved Solids (TDS / STD)  (ppm)            |     110                                             |     141                            |
 |     ORP (mV)                                             |     228.1                                           |     146.1                          |
-|     Turbidity / Turbidez                                 |     Slightly green/brown Un poco   verde/marron     |     Clear / Transparente           |
+|     Turbidity / Turbidez                                 |     Slightly green brown / Un poco verde marron     |     Clear / Transparente           |
 |     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     123 (1.6N)                                      |     184 (1.6N)                     |
 |     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     116                                             |     144                            |
 
