--- a/_docs/site-network/Q1_3.md
+++ b/_docs/site-network/Q1_3.md
@@ -59,27 +59,27 @@ The following river and water quality data was collected from this site:
 
 En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
-|     Site / Sitio: Q1.3                                   |     March / marzo 2023                                |
-|----------------------------------------------------------|-----------------------------------------------|
-|     Season / Temporada:                                  |     Austral Summer / Verano                   |
-|     Date / Fecha:                                        |     21.3.23                                   |
-|     Time / Hora:                                         |     9.30                                      |
-|     Width / Ancho (m)                                    |     5.74                                      |
-|     Depth / Profundidad (Av.) (m)                        |     0.19                                      |
-|     CSA / Area traversal (Av.) (m²)                      |     1.09                                      |
-|     Velocity / Velocidad  (Av.) (m/s)                    |     0.88                                      |
-|     Discharge / Caudal (Av.) (m³/s)                      |     0.960                                     |
-|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Principalmente rocas    |
-|     Temperature (Atmospheric) (°C)                       |     15.9                                      |
-|     Temperature (Water / Agua) (°C)                      |     11.18                                     |
-|     Atmospheric pressure / presión (mbar)                |     684.3                                     |
-|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     6.29                                      |
-|     Dissolved oxygen / Oxigeno disuelto (%)              |     97.4                                      |
-|     pH                                                   |                        8.57                   |
-|     Conductivity / Conductividad (µS/cm)                 |     269                                       |
-|     Total Dissolved Solids (TDS / STD)  (ppm)            |     134                                       |
-|     ORP (mV)                                             |     265.6                                     |
-|     Turbidity / Turbidez                                 |     Clear / Transparente                      |
-|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     158 (1.6N)                                |
-|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     150                                       |
+|       Site / Sitio: Q1.3                                 |       March / marzo 2023           |       June / junio 2023            |
+|----------------------------------------------------------|------------------------------------|------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano        |     Austral Winter / Invierno      |
+|     Date / Fecha:                                        |     21.3.23                        |     24.6.23                        |
+|     Time / Hora:                                         |     9.30                           |     10.00                          |
+|     Width / Ancho (m)                                    |     5.74                           |     2.60                           |
+|     Depth / Profundidad (Av.) (m)                        |     0.19                           |     0.39                           |
+|     CSA / Area traversal (Av.) (m²)                      |     1.09                           |     1.01                           |
+|     Velocity / Velocidad  (Av.) (m/s)                    |     0.88                           |     0.320                          |
+|     Discharge / Caudal (Av.) (m³/s)                      |     0.960                          |     0.324                          |
+|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Mas rocas    |     Mainly boulders / Mas rocas    |
+|     Temperature (Atmospheric) (°C)                       |     15.9                           |     17.0                           |
+|     Temperature (Water / Agua) (°C)                      |     11.18                          |     8.37                           |
+|     Atmospheric pressure / presión (mbar)                |     684.3                          |     685.8                          |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     6.29                           |     7.22                           |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |     97.4                           |     103.3                          |
+|     pH                                                   |                        8.57        |     8.26                           |
+|     Conductivity / Conductividad (µS/cm)                 |     269                            |     386                            |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     134                            |     193                            |
+|     ORP (mV)                                             |     265.6                          |     118.8                          |
+|     Turbidity / Turbidez                                 |     Clear / Transparente           |     Clear / Transparente           |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     158 (1.6N)                     |     214 (1.6N)                     |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     150                            |     187                            |
 
