--- a/_docs/site-network/Q2_1.md
+++ b/_docs/site-network/Q2_1.md
@@ -59,26 +59,26 @@ The following river and water quality data was collected from this site:
 
 En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
-|     Site / Sitio: Q2.1                                   |     March / marzo 2023                        |
-|----------------------------------------------------------|---------------------------------------|
-|     Season / Temporada:                                  |     Austral Summer / Verano           |
-|     Date / Fecha:                                        |     17.3.23                           |
-|     Time / Hora:                                         |     7.30                              |
-|     Width / Ancho (m)                                    |     3.09                              |
-|     Depth / Profundidad (Av.) (m)                        |     0.16                              |
-|     CSA / Area traversal (Av.) (m²)                      |     0.49                              |
-|     Velocity / Velocidad  (Av.) (m/s)                    |     0.42                              |
-|     Discharge / Caudal (Av.) (m³/s)                      |     0.208                             |
-|     Riverbed sediment / Sedimentos                       |     Mainly pebbles / Mas piedritas    |
-|     Temperature (Atmospheric) (°C)                       |     20.3                              |
-|     Temperature (Water / Agua) (°C)                      |     17.92                             |
-|     Atmospheric pressure / presión (mbar)                |     804.1                             |
-|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |                                       |
-|     Dissolved oxygen / Oxigeno disuelto (%)              |                                       |
-|     pH                                                   |     8.38                              |
-|     Conductivity / Conductividad (µS/cm)                 |     847                               |
-|     Total Dissolved Solids (TDS / STD)  (ppm)            |     424                               |
-|     ORP (mV)                                             |     223.8                             |
-|     Turbidity / Turbidez                                 |     Grey/Brown Gris/Marron            |
-|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     320 (1.6N)                        |
-|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     286                               |
+|       Site / Sitio: Q2.1                                 |       March / marzo 2023              |       June / junio 2023                        |
+|----------------------------------------------------------|---------------------------------------|------------------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano           |     Austral Winter / Invierno                  |
+|     Date / Fecha:                                        |     17.3.23                           |     19.6.23                                    |
+|     Time / Hora:                                         |     7.30                              |     9.00                                       |
+|     Width / Ancho (m)                                    |     3.09                              |     2.38                                       |
+|     Depth / Profundidad (Av.) (m)                        |     0.16                              |     0.21                                       |
+|     CSA / Area traversal (Av.) (m²)                      |     0.49                              |     0.50                                       |
+|     Velocity / Velocidad  (Av.) (m/s)                    |     0.42                              |     0.450                                      |
+|     Discharge / Caudal (Av.) (m³/s)                      |     0.208                             |     0.225                                      |
+|     Riverbed sediment / Sedimentos                       |     Mainly pebbles / Mas piedritas    |     Pebbles & cobbles / Piedritas y Piedras    |
+|     Temperature (Atmospheric) (°C)                       |     20.3                              |     20.9                                       |
+|     Temperature (Water / Agua) (°C)                      |     17.92                             |     14.95                                      |
+|     Atmospheric pressure / presión (mbar)                |     804.1                             |     807.3                                      |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |                                       |     9.39                                       |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |                                       |     113.3                                      |
+|     pH                                                   |     8.38                              |     8.36                                       |
+|     Conductivity / Conductividad (µS/cm)                 |     847                               |     874                                        |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     424                               |     437                                        |
+|     ORP (mV)                                             |     223.8                             |     80.8                                       |
+|     Turbidity / Turbidez                                 |     Grey Brown / Gris Marron          |     Clear / Transparente                       |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     320 (1.6N)                        |     323 (1.6N)                                 |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     286                               |     382                                        |
