--- a/_docs/site-network/Q2_2.md
+++ b/_docs/site-network/Q2_2.md
@@ -94,27 +94,27 @@ The following river and water quality data was collected from this site:
 
 En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
-|     Site / Sitio: Q2.2                                   |     March / marzo 2023                                           |
-|----------------------------------------------------------|----------------------------------------------------------|
-|     Season / Temporada:                                  |     Austral Summer / Verano                              |
-|     Date / Fecha:                                        |     18.3.23                                              |
-|     Time / Hora:                                         |     8.30                                                 |
-|     Width / Ancho (m)                                    |     5.80                                                 |
-|     Depth / Profundidad (Av.) (m)                        |     0.23                                                 |
-|     CSA / Area traversal (Av.) (m²)                      |     1.33                                                 |
-|     Velocity / Velocidad  (Av.) (m/s)                    |     0.42                                                 |
-|     Discharge / Caudal (Av.) (m³/s)                      |     0.560                                                |
-|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Mas rocas                          |
-|     Temperature (Atmospheric) (°C)                       |     20.3                                                 |
-|     Temperature (Water / Agua) (°C)                      |     11.09                                                |
-|     Atmospheric pressure / presión (mbar)                |     762.6                                                |
-|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     7.41                                                 |
-|     Dissolved oxygen / Oxigeno disuelto (%)              |     91.5                                                 |
-|     pH                                                   |     8.01                                                 |
-|     Conductivity / Conductividad (µS/cm)                 |     53                                                   |
-|     Total Dissolved Solids (TDS / STD)  (ppm)            |     26                                                   |
-|     ORP (mV)                                             |     212.2                                                |
-|     Turbidity / Turbidez                                 |     Clear, slightly grey / Transparente, poco gris       |
-|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     47 (1.6N)                                            |
-|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     48                                                   |
+|       Site / Sitio: Q2.2                                 |       March / marzo 2023                                 |       June / junio 2023            |
+|----------------------------------------------------------|----------------------------------------------------------|------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano                              |     Austral Winter / Invierno      |
+|     Date / Fecha:                                        |     18.3.23                                              |     21.6.23                        |
+|     Time / Hora:                                         |     8.30                                                 |     12.30                          |
+|     Width / Ancho (m)                                    |     5.80                                                 |     2.64                           |
+|     Depth / Profundidad (Av.) (m)                        |     0.23                                                 |     0.14                           |
+|     CSA / Area traversal (Av.) (m²)                      |     1.33                                                 |     0.37                           |
+|     Velocity / Velocidad  (Av.) (m/s)                    |     0.42                                                 |     0.344                          |
+|     Discharge / Caudal (Av.) (m³/s)                      |     0.560                                                |     0.127                          |
+|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Mas rocas                          |     Mainly boulders / Mas rocas    |
+|     Temperature (Atmospheric) (°C)                       |     20.3                                                 |     26.2                           |
+|     Temperature (Water / Agua) (°C)                      |     11.09                                                |     12.81                          |
+|     Atmospheric pressure / presión (mbar)                |     762.6                                                |     775.3                          |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     7.41                                                 |     9.07                           |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |     91.5                                                 |     112.8                          |
+|     pH                                                   |     8.01                                                 |     8.12                           |
+|     Conductivity / Conductividad (µS/cm)                 |     53                                                   |     72                             |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     26                                                   |     36                             |
+|     ORP (mV)                                             |     212.2                                                |     154.3                          |
+|     Turbidity / Turbidez                                 |     Clear, slightly grey / Transparente, poco gris       |     Clear / Transparente           |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     47 (1.6N)                                            |     77 (1.6N)                      |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     48                                                   |     52                             |
 
