--- a/_docs/site-network/Q2_3.md
+++ b/_docs/site-network/Q2_3.md
@@ -55,26 +55,26 @@ The following river and water quality data was collected from this site:
 
 En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
-|     Site / Sitio: Q2.3                                   |     March / marzo 2023                                           |
-|----------------------------------------------------------|----------------------------------------------------------|
-|     Season / Temporada:                                  |     Austral Summer / Verano                              |
-|     Date / Fecha:                                        |     19.3.23                                              |
-|     Time / Hora:                                         |     8.30                                                 |
-|     Width / Ancho (m)                                    |     6.00                                                 |
-|     Depth / Profundidad (Av.) (m)                        |     0.08                                                 |
-|     CSA / Area traversal (Av.) (m²)                      |     0.50                                                 |
-|     Velocity / Velocidad  (Av.) (m/s)                    |     1.17                                                 |
-|     Discharge / Caudal (Av.) (m³/s)                      |     0.589                                                |
-|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Principalmente rocas               |
-|     Temperature (Atmospheric) (°C)                       |     9.0                                                  |
-|     Temperature (Water / Agua) (°C)                      |     10.83                                                |
-|     Atmospheric pressure / presión (mbar)                |     680.3                                                |
-|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     5.78                                                 |
-|     Dissolved oxygen / Oxigeno disuelto (%)              |     89.9                                                 |
-|     pH                                                   |     7.99                                                 |
-|     Conductivity / Conductividad (µS/cm)                 |     64                                                   |
-|     Total Dissolved Solids (TDS / STD)  (ppm)            |     32                                                   |
-|     ORP (mV)                                             |     208.9                                                |
-|     Turbidity / Turbidez                                 |     Clear: slightly green Transparente:   poco verde     |
-|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     32 (1.6N)                                            |
-|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     20                                                   |
+|       Site / Sitio: Q2.3                                 |       March / marzo 2023                                 |       June / junio 2023                        |
+|----------------------------------------------------------|----------------------------------------------------------|------------------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano                              |     Austral Winter / Invierno                  |
+|     Date / Fecha:                                        |     19.3.23                                              |     25.6.23                                    |
+|     Time / Hora:                                         |     8.30                                                 |     11.00                                      |
+|     Width / Ancho (m)                                    |     6.00                                                 |     6.00                                       |
+|     Depth / Profundidad (Av.) (m)                        |     0.08                                                 |     0.05                                       |
+|     CSA / Area traversal (Av.) (m²)                      |     0.50                                                 |     0.30                                       |
+|     Velocity / Velocidad  (Av.) (m/s)                    |     1.17                                                 |     0.930                                      |
+|     Discharge / Caudal (Av.) (m³/s)                      |     0.589                                                |     0.279                                      |
+|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Mas  rocas                         |     Cobbless & Boulders / Piedras y   Rocas    |
+|     Temperature (Atmospheric) (°C)                       |     9.0                                                  |     11.5                                       |
+|     Temperature (Water / Agua) (°C)                      |     10.83                                                |     9.68                                       |
+|     Atmospheric pressure / presión (mbar)                |     680.3                                                |     681.2                                      |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     5.78                                                 |     6.83                                       |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |     89.9                                                 |     102.4                                      |
+|     pH                                                   |     7.99                                                 |     8.05                                       |
+|     Conductivity / Conductividad (µS/cm)                 |     64                                                   |     41                                         |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     32                                                   |     21                                         |
+|     ORP (mV)                                             |     208.9                                                |     109.0                                      |
+|     Turbidity / Turbidez                                 |     Clear: slightly green Transparente:   poco verde     |     Clear / Transparente                       |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     32 (1.6N)                                            |     41 (1.6N)                                  |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     20                                                   |     30                                         |
