--- a/_docs/site-network/Q2_3.md
+++ b/_docs/site-network/Q2_3.md
@@ -65,7 +65,7 @@ En este lugar se recogieron los siguientes datos fluviales y de calidad del agua
 |     CSA / Area traversal (Av.) (m²)                      |     0.50                                                 |     0.30                                       |
 |     Velocity / Velocidad  (Av.) (m/s)                    |     1.17                                                 |     0.930                                      |
 |     Discharge / Caudal (Av.) (m³/s)                      |     0.589                                                |     0.279                                      |
-|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Mas  rocas                         |     Cobbless & Boulders / Piedras y   Rocas    |
+|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Mas rocas                          |     Cobbless & Boulders / Piedras y Rocas      |
 |     Temperature (Atmospheric) (°C)                       |     9.0                                                  |     11.5                                       |
 |     Temperature (Water / Agua) (°C)                      |     10.83                                                |     9.68                                       |
 |     Atmospheric pressure / presión (mbar)                |     680.3                                                |     681.2                                      |
@@ -75,6 +75,6 @@ En este lugar se recogieron los siguientes datos fluviales y de calidad del agua
 |     Conductivity / Conductividad (µS/cm)                 |     64                                                   |     41                                         |
 |     Total Dissolved Solids (TDS / STD)  (ppm)            |     32                                                   |     21                                         |
 |     ORP (mV)                                             |     208.9                                                |     109.0                                      |
-|     Turbidity / Turbidez                                 |     Clear: slightly green Transparente:   poco verde     |     Clear / Transparente                       |
+|     Turbidity / Turbidez                                 |     Clear: slightly green / Transparente: poco verde     |     Clear / Transparente                       |
 |     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     32 (1.6N)                                            |     41 (1.6N)                                  |
 |     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     20                                                   |     30                                         |
