--- a/_docs/site-network/Q2_4.md
+++ b/_docs/site-network/Q2_4.md
@@ -51,26 +51,26 @@ The following river and water quality data was collected from this site:
 
 En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
-|     Site / Sitio: Q2.4                                   |     March / marzo 2023                                          |
-|----------------------------------------------------------|---------------------------------------------------------|
-|     Season / Temporada:                                  |     Austral Summer / Verano                             |
-|     Date / Fecha:                                        |     19.3.23                                             |
-|     Time / Hora:                                         |     10.45                                               |
-|     Width / Ancho (m)                                    |     2.70                                                |
-|     Depth / Profundidad (Av.) (m)                        |     0.19                                                |
-|     CSA / Area traversal (Av.) (m²)                      |     0.51                                                |
-|     Velocity / Velocidad  (Av.) (m/s)                    |     0.86                                                |
-|     Discharge / Caudal (Av.) (m³/s)                      |     0.441                                               |
-|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Principalmente rocas              |
-|     Temperature (Atmospheric) (°C)                       |     18.1                                                |
-|     Temperature (Water / Agua) (°C)                      |     11.14                                               |
-|     Atmospheric pressure / presión (mbar)                |     676.1                                               |
-|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     4.45                                                |
-|     Dissolved oxygen / Oxigeno disuelto (%)              |     72.9                                                |
-|     pH                                                   |     7.48                                                |
-|     Conductivity / Conductividad (µS/cm)                 |     48                                                  |
-|     Total Dissolved Solids (TDS / STD)  (ppm)            |     24                                                  |
-|     ORP (mV)                                             |     270.8                                               |
-|     Turbidity / Turbidez                                 |     Clear: slightly black Transparente:   poco negro    |
-|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     39 (1.6N)                                           |
-|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     20                                                  |
+|       Site / Sitio: Q2.4                                 |       March / marzo 2023                                |       June / junio 2023                  |
+|----------------------------------------------------------|---------------------------------------------------------|------------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano                             |     Austral Winter / Invierno            |
+|     Date / Fecha:                                        |     19.3.23                                             |     25.6.23                              |
+|     Time / Hora:                                         |     10.45                                               |     11.00                                |
+|     Width / Ancho (m)                                    |     2.70                                                |     2.80                                 |
+|     Depth / Profundidad (Av.) (m)                        |     0.19                                                |     0.15                                 |
+|     CSA / Area traversal (Av.) (m²)                      |     0.51                                                |     0.42                                 |
+|     Velocity / Velocidad  (Av.) (m/s)                    |     0.86                                                |     0.635                                |
+|     Discharge / Caudal (Av.) (m³/s)                      |     0.441                                               |     0.267                                |
+|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Mas rocas                         |     Cobbles & Rocks / Piedras y Rocas    |
+|     Temperature (Atmospheric) (°C)                       |     18.1                                                |     17.4                                 |
+|     Temperature (Water / Agua) (°C)                      |     11.14                                               |     10.21                                |
+|     Atmospheric pressure / presión (mbar)                |     676.1                                               |     678.4                                |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     4.45                                                |     6.36                                 |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |     72.9                                                |     97.3                                 |
+|     pH                                                   |     7.48                                                |     8.00                                 |
+|     Conductivity / Conductividad (µS/cm)                 |     48                                                  |     43                                   |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     24                                                  |     22                                   |
+|     ORP (mV)                                             |     270.8                                               |     134.7                                |
+|     Turbidity / Turbidez                                 |     Clear: slightly black Transparente:   poco negro    |     Clear /  Transparente                |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     39 (1.6N)                                           |     42 (1.6N)                            |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     20                                                  |     28                                   |
