--- a/_docs/site-network/Q2_4.md
+++ b/_docs/site-network/Q2_4.md
@@ -71,7 +71,7 @@ En este lugar se recogieron los siguientes datos fluviales y de calidad del agua
 |     Conductivity / Conductividad (µS/cm)                 |     48                                                  |     43                                   |
 |     Total Dissolved Solids (TDS / STD)  (ppm)            |     24                                                  |     22                                   |
 |     ORP (mV)                                             |     270.8                                               |     134.7                                |
-|     Turbidity / Turbidez                                 |     Clear: slightly black Transparente:   poco negro    |     Clear /  Transparente                |
+|     Turbidity / Turbidez                                 |     Clear: slightly black / Transparente: poco negro    |     Clear / Transparente                 |
 |     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     39 (1.6N)                                           |     42 (1.6N)                            |
 |     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     20                                                  |     28                                   |
 
